tests/baselines/reference/iterableArrayPattern23.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern23.ts(2,1): error TS2488: Type '{ 0: string; 1: true; }' must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern23.ts (1 errors) ====
    var a: string, b: boolean;
    [a, b] = { 0: "", 1: true };
    ~~~~~~
!!! error TS2488: Type '{ 0: string; 1: true; }' must have a '[Symbol.iterator]()' method that returns an iterator.